코드 리스트 폼 업데이트 삭제

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -364,7 +364,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="#">코드관리</a>
+                                <a th:href="@{/code/codeXdmList}">코드관리</a>
                             </li>
                             <li>
                                 <a th:href="@{/codeGroup/codeGroupXdmList}">코드그룹관리</a>
