주문관리 ,주문관리 상세 깡통 html 만듬

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -351,7 +351,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="#">주문내용목록</a>
+                                <a th:href="@{/OrderXdmList}">주문내용목록</a>
                             </li>
                            
                         </ul> 
