오더매퍼 재고관리쿼리

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -325,7 +325,7 @@
                                 <a href="#">입출고내역</a>
                             </li>
                             <li>
-                                <a th:href="">창고재고조회</a>
+                                <a href="#">창고재고조회</a>
                             </li>
                            
                         </ul>
