--- a/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
+++ b/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
@@ -6,10 +6,11 @@
 	 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
+    <li class="nav-item">
+      <h6>[[${session.sessNamePda}]]</h6>
 
-   
+      </li>
 
-      
       <li class="nav-item">
         <a class="nav-link " data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -27,15 +28,12 @@
           </li>
         </ul>
       </li><!-- End Tables Nav -->
-
-
       <li class="nav-item">
-        <a class="nav-link collapsed" th:href="@{/SigninPda}">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
+        <a class="nav-link collapsed" id="btnSignout">
+          <i class="bi bi-box-arrow-right"></i>
+          <span>로그아웃</span>
         </a>
       </li><!-- End Login Page Nav -->
-
     </ul>
 
   </aside><!-- End Sidebar-->
