창고재고 조회 페이지네이션 만저야됨

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -325,7 +325,7 @@
                                 <a href="#">입출고내역</a>
                             </li>
                             <li>
-                                <a href="#">창고재고조회</a>
+                                <a th:href="@{/StorageXdmList}">창고재고조회</a>
                             </li>
                            
                         </ul>
@@ -338,7 +338,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/StorageXdmList}">상품목록조회</a>
+                                <a >상품목록조회</a>
                             </li>
                            
                         </ul>
