20250410- 상품리스트

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -338,7 +338,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a >상품목록조회</a>
+                                <a th:href="@{/productXdmList}">상품목록조회</a>
                             </li>
                            
                         </ul>
