--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -319,7 +319,7 @@
                         <ul class="ml-menu">
                             
                             <li>
-                                <a href="#">발주내역</a>
+                                <a th:href="@{/FactoryOrderXdmList}">발주내역</a>
                             </li>
                             <li>
                                 <a href="#">입출고내역</a>
@@ -339,7 +339,7 @@
                         <ul class="ml-menu">
                             <li>
                                 <a th:href="@{/productXdmList}">상품목록조회</a>
->>>>>>> branch 'main' of https://github.com/kimkyoungmin97/repo_ahn.git
+
                             </li>
                            
                         </ul>
