--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -322,7 +322,7 @@
                                 <a th:href="@{/FactoryOrderXdmList}">발주내역</a>
                             </li>
                             <li>
-                                <a href="#">입출고내역</a>
+                                <a th:href="@{/ReceivingXdmList}">입출고내역</a>
                             </li>
                             <li>
                                 <a th:href="@{/StorageXdmList}">창고재고조회</a>
