--- a/ahn/src/main/resources/templates/xdm/product/productXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/product/productXdmList.html
@@ -11,7 +11,7 @@
         <div class="container-fluid">
             
             <div class="block-header">
-                <h2>주문내역 목록</h2>
+                <h2>상품 목록</h2>
             </div>
 
             <!-- Input -->
@@ -146,7 +146,7 @@
                                             <th>판매상태</th>
                                             <th>등록일자</th>
                                             <th>수정일자</th>
-                                            <th>주문수량</th>
+                                            <th>상품수량</th>
                                            
                                             
                                            
