--- a/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
+++ b/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
@@ -7,27 +7,24 @@
 
     <ul class="sidebar-nav" id="sidebar-nav">
     <li class="nav-item">
-      <h6>[[${session.sessNamePda}]]</h6>
-
+		<div>
+		<strong>사용자: </strong>[[${session.sessNamePda}]]
+		</div>
+      <hr>
       </li>
-
       <li class="nav-item">
-        <a class="nav-link " data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
+        <a class="nav-link collapsed" >
+          <i class="bi bi-box-arrow-right"></i>
+          <span>입고관리</span>
         </a>
-        <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="tables-general.html" class="active">
-              <i class="bi bi-circle"></i><span>General Tables</span>
-            </a>
-          </li>
-          <li>
-            <a href="tables-data.html">
-              <i class="bi bi-circle"></i><span>Data Tables</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Tables Nav -->
+      </li><!-- End Login Page Nav -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" >
+          <i class="bi bi-box-arrow-right"></i>
+          <span>출고관리</span>
+        </a>
+      <hr>
+      </li><!-- End Login Page Nav -->
       <li class="nav-item">
         <a class="nav-link collapsed" id="btnSignout">
           <i class="bi bi-box-arrow-right"></i>
