메뉴바 수정

--- a/ahn/src/main/resources/templates/xdm/include/head.html
+++ b/ahn/src/main/resources/templates/xdm/include/head.html
@@ -314,23 +314,15 @@
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons"></i>
-                            <span>창고 관리</span>
+                            <span>주문관리</span>
                         </a>
                         <ul class="ml-menu">
-                            
                             <li>
-                                <a th:href="@{/FactoryOrderXdmList}">발주내역</a>
-                            </li>
-                            <li>
-                                <a th:href="@{/ReceivingXdmList}">입출고내역</a>
-                            </li>
-                            <li>
-                                <a th:href="@{/StorageXdmList}">창고재고조회</a>
+                                <a th:href="@{/OrderXdmList}">주문목록</a>
                             </li>
                            
-                        </ul>
+                        </ul> 
                     </li>
-                
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons"></i>
@@ -338,24 +330,40 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/productXdmList}">상품목록조회</a>
+                                <a th:href="@{/productXdmList}">상품재고</a>
+                            </li>
+                            <li>
+                                <a th:href="@{/FactoryOrderXdmList}">발주내역</a>
                             </li>
                            
                         </ul>
                     </li>
-                   
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons"></i>
-                            <span>주문관리</span>
+                            <span>발주관리</span>
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/OrderXdmList}">주문내용목록</a>
+                                <a th:href="@{/ReceivingXdmList}">입출고내역</a>
                             </li>
                            
                         </ul> 
                     </li>
+                    <li>
+                        <a href="javascript:void(0);" class="menu-toggle">
+                            <i class="material-icons"></i>
+                            <span>배송관리</span>
+                        </a>
+                        <ul class="ml-menu">
+                            <li>
+                                <a >미정</a>
+                            </li>
+                           
+                        </ul> 
+                    </li>
+                    
+                   
                     
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
